# fonbot_ros

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: empty.yaml
description/: camera.xacro  microphone.xacro  robot.urdf.xacro  robot_core.xacro  ultrasonic.xacro  ultrasonic_back.xacro  ultrasonic_bottom_back.xacro  ultrasonic_bottom_front.xacro  ultrasonic_front.xacro
fonbot_package/: subscriber_member_function.py
fonbot_ros/: publisher_camera.py  subscriber_camera.py  subscriber_member_function.py
launch/: urdf.launch.py
models/: microphone.dae  tank_tracks.dae  ultrasonic.dae  ultrasonic.stl
rviz/: robot_model.rviz
